On development: 2020-14-02 15:49 Adición de Reportería * Inserción de clases necesarías para la reportería . * Modificación de Vistas para la generación de reportes.

--- a/SegurosEquinoccial.Pymes.Web/ClientApp/src/index.html
+++ b/SegurosEquinoccial.Pymes.Web/ClientApp/src/index.html
@@ -24,9 +24,9 @@
   <script src="assets/js/jspdf.min.js"></script>
   <script src="assets/js/jspdf.plugin.autotable.js"></script>
   <script src="assets/js/moment.js"></script>
-  <style>
+  <script src="assets/js/excelexportjs.js"></script>
 
-  </style>
+ 
 </head>
 
 <body style="background-color: #303030">
